# Mnemosyne

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  llm_config.example.json  meta.json  pyproject.toml  setup.py  start-api.cmd  start-dashboard.cmd  start-v8-api.cmd
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-dashboard.yml
docs/: README_CN.md  V8_HANDOVER.md  agent-integration.md  analogical-thinking-darwin-eval.json  architecture.md  benchmarks.md  external-project-lessons-blueprint.md  faq.md  gate-steps-plan.md  open-source-launch.md  test-v60-simulation.md  v6.0-design.md  v6.1-release-notes.md  v8-agent-system-prompt.md  web-dashboard-plan.md  why-it-matters.md
docs/archive/: MEMORY.md  release-checklist-v7.2.md  upgrade-plan-v4.1.md  v4.2-blueprint.md  v6.1-blueprint.md  v7.0-skill-memory-system.md  v7.1-bilateral-skill-evolution.md  v7.2-development-plan.md  v7.2-skill-evidence-flow.md
engine/: quick_record.py
examples/: quick_start.py
scripts/api/: start_api.py  v8_routes.py
scripts/core/: __init__.py  contracts.py  dream_pipeline.py  embedder.py  graph_store.py  runners.py  utils.py  (+5 more)
tests/: test_bilateral_skill_evolution.py  test_dream_phase_contract.py  test_gate_steps.py  test_mcp_v8_surface.py  test_skill_evidence_flow.py  test_skill_prompt_metadata_migration.py  test_v8_dashboard_store.py  test_v8_demo.py  test_v8_feedback.py  test_v8_mvp.py  test_v8_rest_api.py
v8/: DESIGN_BRIEF_DRAFT.md  MVP_PLAN.md  README.md
(+24 files in other folders)
