[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemosyne"
version = "8.0.0"
description = "An AI memory system — experiments in remembering, forgetting, and evolving"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "nianpangzhi233"},
]
keywords = ["ai", "memory", "graphrag", "knowledge-graph", "embedding", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy",
    "streamlit>=1.30",
]

[project.optional-dependencies]
full = [
    "torch>=2.6",
    "sentence-transformers",
    "apscheduler",
    "fastapi",
    "uvicorn",
    "httpx",
]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
mnemosyne-v8 = "v8_memory.cli:main"

[tool.setuptools.packages.find]
where = ["v8/src", "scripts", "engine"]

[tool.ruff]
line-length = 120
target-version = "py310"
